<resources>
    <string name="app_name">EvertePlacetoPay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label">Name</string>
    <string name="password">Pasword</string>
    <string name="correo">Correo</string>
    <string name="numero_celular">Numero celular</string>
    <string name="numero_tarjeta">Numero tarjeta</string>
    <string name="mes">Mes</string>
    <string name="cvv">Cvv</string>
    <string name="Año">Año</string>
    <string name="reference">Referencia</string>
    <string name="description">Descripcion</string>
    <string name="value">Valor a pagar</string>
    <string name="surname">Apellido</string>
    <string name="document">Numero de documento</string>
    <string name="aprobada">APROBADA</string>
    <string name="date">Date</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cancelar">Cancelar</string>
    <string name="alerta">Alerta</string>
    <string name="cerrar_sesion_confirm">¿ Esta de seguro de cerrar la sesion ?</string>
    <string name="cerrar_sesion_accept">Cerrar sesion</string>
    <string name="nuevo_usuario">Nuevo usuario</string>
    <string name="por_favor_registrese_primer">Por favor registrese primero para poder iniciar sesion</string>
    <string name="error">error</string>
    <string name="aceptar">Aceptar</string>
    <string name="ocurrio_un_error_login">Ocurrio un error durante el incio de sesion, por favor intente de nuevo.</string>
    <string name="registro_tittle">Registro</string>
    <string name="your_new_account_have_been_created">Tu nueva cuenta ha sido creada</string>
    <string name="Close">Cerrar</string>
    <string name="actualizar">Actualizar</string>
    <string name="borrar">Borrar</string>
    <string name="generar_pago">Generar pago</string>
    <string name="updated_transaction">Transaccion actualizada</string>
    <string name="delete_transaction">¿Confirma borrar la transaccion?</string>
    <string name="confirm">Confirmar</string>
    <string name="ocurrio_un_error_generando">Ocurrio un error en la generacion del pago, por favor valide la informacion ingresasa.</string>
    <string name="confirma_generated_transaction">¿Confirma generar la transaccion con los dato ingresados?</string>
    <string name="transaction_udate">La transaccion fue actualizada</string>
    <string name="information">Informacion</string>
    <string name="error_actualizando">Ocurrio un error actualizando la transaccion</string>
    <string name="enter_fields">Por favor ingrese todos los campos</string>
</resources>